[package]
name = "chester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.7.5", features = ["ws"] }
futures-util = "0.3.30"
rust_decimal = {version = "1.35.0", features = ["serde-str"]}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1", features = ["full"]}
tokio-tungstenite = {version="0.21", features = ["rustls-tls-native-roots"]}
